pregunta 5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: eCommerce.com
    http:
      paths:
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
